--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -1268,6 +1268,10 @@ editors also have the ability to make simple HTML tables for basic layouts.
 				<option value="8">8</option> 
 				<option value="9">9</option> 
 				<option value="10">10</option> 
+				<option value="15">15</option> 
+				<option value="20">20</option> 
+				<option value="25">25</option> 
+				<option value="30">30</option> 
 			</select>
 		</p>
 
@@ -1291,6 +1295,47 @@ editors also have the ability to make simple HTML tables for basic layouts.
 	</fieldset> 	
 	</div> 
 <!-- /tmpl_if --> 
+
+
+
+
+
+<!-- tmpl_if show_confirmation_token_options --> 
+
+	<p>
+		<input type="checkbox" name="configure_confirmation_token" id="configure_confirmation_token" value="1" />			
+	<label for="configure_confirmation_token">Configure Confirmation Token Options</label>
+	</p>
+	<div id="confirmation_token_options">
+	<fieldset> 	
+		<p>
+			<label for="confirmation_token_expires">
+				Keep Confirmation Tokens For: 
+			</label>
+			<select name="confirmation_token_expires" id="confirmation_token_expires">
+				<option value="5">5</option>
+				<option value="10">10</option>
+				<option value="15">15</option>
+				<option value="20">20</option>
+				<option value="30">30</option> 
+				<option value="60" selected="selected">60</option> 
+				<option value="90">90</option>
+				<option value="180">180</option>
+				<option value="360">360</option>
+			</select>
+			Days
+		</p>
+	</fieldset> 	
+	</div> 
+<!-- /tmpl_if --> 
+
+
+
+
+
+
+
+
 
 <!-- tmpl_if show_amazon_ses_options --> 
 
