First commit - lot more work needed!

--- a/dada/templates/error_token_problem_screen.tmpl
+++ b/dada/templates/error_token_problem_screen.tmpl
@@ -1,5 +1,5 @@
 <!-- begin error_token_problem_screen -->
-<p>Your confirmation link doesn't seem to be working.</p> 
+<!-- tmpl_set name="title" value="Yikes! Problems with Confirmation Token" --> 
 
 <p>This may be because:</p> 
 
