--- a/dada/templates/list_type_switch_widget.tmpl
+++ b/dada/templates/list_type_switch_widget.tmpl
@@ -24,6 +24,16 @@
 					</a>
 					</li>
 				<!-- /tmpl_if --> 
+
+				<!-- tmpl_if list_settings.private_list -->
+					<li <!-- tmpl_if EXPR="(type eq 'unsub_request_list')" --> class="active" <!-- /tmpl_if -->> 
+						<a href="#" class="change_type" data-type="unsub_request_list">
+					  <span>
+						Unsubscription Requests  (<!-- tmpl_var unsub_request_list_subscribers_num -->)
+					  </span>
+					</a>
+					</li>
+				<!-- /tmpl_if --> 
 			<!-- /tmpl_if --> 
 			
 			
