--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -756,9 +756,14 @@ editors also have the ability to make simple HTML tables for basic layouts.
 	<h2>File Browsers/Uploaders</h2>
 
 	<p>
-		<input type="checkbox" name="file_browser_install_kcfinder" id="file_browser_install_kcfinder" value="1" checked="checked"/>			
+		<input type="radio" name="file_browser_install" id="file_browser_install_kcfinder" value="kcfinder" checked="checked"/>			
 		<label for="file_browser_install_kcfinder">Install KCFinder</label>
 	</p>
+	<p>
+		<input type="radio" name="file_browser_install" id="file_browser_install_core5_filemanager" value="core5_filemanager" checked="checked"/>			
+		<label for="file_browser_install_core5_filemanager">Install Core Five FileManager</label>
+	</p>
+
 		</fieldset> 
 </div> 
 
