--- a/dada/installer-disabled/templates/wysiwyg_options_snippet.tmpl
+++ b/dada/installer-disabled/templates/wysiwyg_options_snippet.tmpl
@@ -22,4 +22,8 @@ $FILE_BROWSER_OPTIONS = {
 		session_name => 'PHPSESSID', 
 		session_dir  => '<!-- tmpl_var i_session_dir -->',
 	},
+	core5_filemanager  => { 
+		enabled      => <!-- tmpl_var i_core5_filemanager_enabled default="0" -->, 
+	},
+	
 };
