--- a/dada/templates/example_dada_config.tmpl
+++ b/dada/templates/example_dada_config.tmpl
@@ -97,6 +97,9 @@ $FILE_BROWSER_OPTIONS = {
 		session_name => 'PHPSESSID', 
 		session_dir  => '/tmp',
 	},
+	core5_filemanager  => { 
+		enabled      => 0, 
+	},
 };
 
 =cut
