--- a/dada/installer-disabled/templates/tiny_mce_config_js.tmpl
+++ b/dada/installer-disabled/templates/tiny_mce_config_js.tmpl
@@ -1,7 +1,7 @@
 <!-- tmpl_if kcfinder_enabled --> 
 	function openKCFinder(field_name, url, type, win) {
 	    tinyMCE.activeEditor.windowManager.open({
-	        file           : '<!-- tmpl_var support_files_dir_url -->/<!-- tmpl_var Support_Files_Dir_Name -->/kcfinder/browse.php?opener=tinymce&type=' + type,
+	        file           : '<!-- tmpl_var file_manager_browse_url -->?opener=tinymce&type=' + type,
 	        title          : 'KCFinder',
 	        width          : 700,
 	        height         : 500,
