--- a/dada/installer-disabled/templates/wysiwyg_options_snippet.tmpl
+++ b/dada/installer-disabled/templates/wysiwyg_options_snippet.tmpl
@@ -24,6 +24,11 @@ $FILE_BROWSER_OPTIONS = {
 	},
 	core5_filemanager  => { 
 		enabled      => <!-- tmpl_var i_core5_filemanager_enabled default="0" -->, 
+		
+		url          => '<!-- tmpl_var i_core5_filemanager_url -->', 
+		upload_dir   => '<!-- tmpl_var i_core5_filemanager_upload_dir -->', 
+		upload_url   => '<!-- tmpl_var i_core5_filemanager_upload_url -->',
+		
 	},
 	
 };
