This wasn't actually… working.

--- a/dada/installer-disabled/templates/core5_filemanager_config_js.tmpl
+++ b/dada/installer-disabled/templates/core5_filemanager_config_js.tmpl
@@ -2,7 +2,7 @@
 		"_comment": "IMPORTANT : go to the wiki page to know about options configuration https://github.com/simogeo/Filemanager/wiki/Filemanager-configuration-file",
     "options": {
         "culture": "en",
-        "lang": "<!-- tmp_var lang default="pl" -->",
+        "lang": "<!-- tmp_var name="lang" default="pl" -->",
         "defaultViewMode": "grid",
         "autoload": true,
         "showFullPath": false,
@@ -16,7 +16,7 @@
         "chars_only_latin": true,
         "dateFormat": "d M Y H:i",
         "serverRoot": true,
-        "fileRoot": '<!-- tmpl_var fileRoot -->',
+        "fileRoot": "<!-- tmpl_var fileRoot -->",
         "relPath": false,
         "logger": false,
         "plugins": []
