Now we support both the perl, and php Connector.

--- a/dada/installer-disabled/templates/wysiwyg_options_snippet.tmpl
+++ b/dada/installer-disabled/templates/wysiwyg_options_snippet.tmpl
@@ -29,6 +29,7 @@ $FILE_BROWSER_OPTIONS = {
 		upload_dir   => '<!-- tmpl_var i_core5_filemanager_upload_dir -->', 
 		upload_url   => '<!-- tmpl_var i_core5_filemanager_upload_url -->',
 		
+		connector    => '<!-- tmpl_var i_core5_filemanager_connector -->', 
 	},
 	
 };
