php isn't going to work, as I have no way to make it secure!

--- a/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
+++ b/dada/installer-disabled/templates/installer_configure_dada_mail_scrn.tmpl
@@ -763,12 +763,16 @@ editors also have the ability to make simple HTML tables for basic layouts.
 		<input type="radio" name="file_browser_install" id="file_browser_install_core5_filemanager" value="core5_filemanager" checked="checked"/>			
 		<label for="file_browser_install_core5_filemanager">Install Core Five FileManager</label>
 	</p>
-	<p><label style="width: 8em;float: left;text-align: right;margin-right: 0.5em;display: block" for="core5_filemanager_connector">Connector:</label>
-		<select name="core5_filemanager_connector" id="core5_filemanager_connector">
+	<input type="hidden" name="core5_filemanager_connector" value="pl" /> 
+<!-- 
+	<p><label style="width: 8em;float: left;text-align: right;margin-right: 0.5em;display: block" for="not_core5_filemanager_connector">Connector:</label>
+		<select name="not_core5_filemanager_connector" id="not_core5_filemanager_connector">
 			<option value="pl">Perl</option>
 			<option value="php">php</option>			
 		</select>
 	</p>
+-->
+
 		</fieldset> 
 </div> 
 
