--- a/dada/installer-disabled/templates/core5_filemanager_config_js.tmpl
+++ b/dada/installer-disabled/templates/core5_filemanager_config_js.tmpl
@@ -2,7 +2,7 @@
 		"_comment": "IMPORTANT : go to the wiki page to know about options configuration https://github.com/simogeo/Filemanager/wiki/Filemanager-configuration-file",
     "options": {
         "culture": "en",
-        "lang": "<!-- tmp_var name="lang" default="pl" -->",
+        "lang": "<!-- tmpl_var lang -->",
         "defaultViewMode": "grid",
         "autoload": true,
         "showFullPath": false,
