--- a/dada/templates/archive_nav_table_widget.tmpl
+++ b/dada/templates/archive_nav_table_widget.tmpl
@@ -8,7 +8,7 @@
     <strong>
 	<!-- tmpl_if prev_subject --> 
 		&lt;&lt; Previous: 
-		<a href="<!-- tmpl_var PROGRAM_URL -->?flavor=<!-- tmpl_var flavor_label -->;list=<!-- tmpl_var list_settings.list -->;id=<!-- tmpl_var prev -->">
+		<a href="<!-- tmpl_var PROGRAM_URL -->?flavor=<!-- tmpl_var flavor_label -->&list=<!-- tmpl_var list_settings.list -->&id=<!-- tmpl_var prev -->">
 		 <!-- tmpl_var prev_subject -->
 		</a>
 	<!-- tmpl_else --> 
@@ -19,7 +19,7 @@
   </td> 
   <td valign="top" align="center" width="33%">
    <p>| <strong>
-   	<a href="<!-- tmpl_var PROGRAM_URL -->?flavor=<!-- tmpl_var flavor_label -->;list=<!-- tmpl_var list_settings.list -->">
+   	<a href="<!-- tmpl_var PROGRAM_URL -->?flavor=<!-- tmpl_var flavor_label -->&list=<!-- tmpl_var list_settings.list -->">
 		Archive Index
 	</a>
 
@@ -30,7 +30,7 @@
     <strong>
 	<!-- tmpl_if next_subject --> 
 		Next: 
-		<a href="<!-- tmpl_var PROGRAM_URL -->?flavor=<!-- tmpl_var flavor_label -->;list=<!-- tmpl_var list_settings.list -->;id=<!-- tmpl_var next -->">
+		<a href="<!-- tmpl_var PROGRAM_URL -->?flavor=<!-- tmpl_var flavor_label -->&list=<!-- tmpl_var list_settings.list -->&id=<!-- tmpl_var next -->">
 		 <!-- tmpl_var next_subject -->
 		</a>
 		&gt;&gt;
